APIs/googleapis.com/displayvideo/v2/python-client/docs/AssignedTargetingOption.md
# AssignedTargetingOption

A single assigned targeting option, which defines the state of a targeting option for an entity with targeting settings.

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**age_range_details** | [**AgeRangeAssignedTargetingOptionDetails**](AgeRangeAssignedTargetingOptionDetails.md) |  | [optional] 
**app_category_details** | [**AppCategoryAssignedTargetingOptionDetails**](AppCategoryAssignedTargetingOptionDetails.md) |  | [optional] 
**app_details** | [**AppAssignedTargetingOptionDetails**](AppAssignedTargetingOptionDetails.md) |  | [optional] 
**assigned_targeting_option_id** | **str** | Output only. The unique ID of the assigned targeting option. The ID is only unique within a given resource and targeting type. It may be reused in other contexts. | [optional] [readonly] 
**assigned_targeting_option_id_alias** | **str** | Output only. An alias for the assigned_targeting_option_id. This value can be used in place of &#x60;assignedTargetingOptionId&#x60; when retrieving or deleting existing targeting. This field will only be supported for all assigned targeting options of the following targeting types: * &#x60;TARGETING_TYPE_AGE_RANGE&#x60; * &#x60;TARGETING_TYPE_DEVICE_TYPE&#x60; * &#x60;TARGETING_TYPE_DIGITAL_CONTENT_LABEL_EXCLUSION&#x60; * &#x60;TARGETING_TYPE_ENVIRONMENT&#x60; * &#x60;TARGETING_TYPE_EXCHANGE&#x60; * &#x60;TARGETING_TYPE_GENDER&#x60; * &#x60;TARGETING_TYPE_HOUSEHOLD_INCOME&#x60; * &#x60;TARGETING_TYPE_NATIVE_CONTENT_POSITION&#x60; * &#x60;TARGETING_TYPE_OMID&#x60; * &#x60;TARGETING_TYPE_PARENTAL_STATUS&#x60; * &#x60;TARGETING_TYPE_SENSITIVE_CATEGORY_EXCLUSION&#x60; * &#x60;TARGETING_TYPE_VIDEO_PLAYER_SIZE&#x60; * &#x60;TARGETING_TYPE_VIEWABILITY&#x60; This field is also supported for line item assigned targeting options of the following targeting types: * &#x60;TARGETING_TYPE_CONTENT_INSTREAM_POSITION&#x60; * &#x60;TARGETING_TYPE_CONTENT_OUTSTREAM_POSITION&#x60; | [optional] [readonly] 
**audience_group_details** | [**AudienceGroupAssignedTargetingOptionDetails**](AudienceGroupAssignedTargetingOptionDetails.md) |  | [optional] 
**audio_content_type_details** | [**AudioContentTypeAssignedTargetingOptionDetails**](AudioContentTypeAssignedTargetingOptionDetails.md) |  | [optional] 
**authorized_seller_status_details** | [**AuthorizedSellerStatusAssignedTargetingOptionDetails**](AuthorizedSellerStatusAssignedTargetingOptionDetails.md) |  | [optional] 
**browser_details** | [**BrowserAssignedTargetingOptionDetails**](BrowserAssignedTargetingOptionDetails.md) |  | [optional] 
**business_chain_details** | [**BusinessChainAssignedTargetingOptionDetails**](BusinessChainAssignedTargetingOptionDetails.md) |  | [optional] 
**carrier_and_isp_details** | [**CarrierAndIspAssignedTargetingOptionDetails**](CarrierAndIspAssignedTargetingOptionDetails.md) |  | [optional] 
**category_details** | [**CategoryAssignedTargetingOptionDetails**](CategoryAssignedTargetingOptionDetails.md) |  | [optional] 
**channel_details** | [**ChannelAssignedTargetingOptionDetails**](ChannelAssignedTargetingOptionDetails.md) |  | [optional] 
**content_duration_details** | [**ContentDurationAssignedTargetingOptionDetails**](ContentDurationAssignedTargetingOptionDetails.md) |  | [optional] 
**content_genre_details** | [**ContentGenreAssignedTargetingOptionDetails**](ContentGenreAssignedTargetingOptionDetails.md) |  | [optional] 
**content_instream_position_details** | [**ContentInstreamPositionAssignedTargetingOptionDetails**](ContentInstreamPositionAssignedTargetingOptionDetails.md) |  | [optional] 
**content_outstream_position_details** | [**ContentOutstreamPositionAssignedTargetingOptionDetails**](ContentOutstreamPositionAssignedTargetingOptionDetails.md) |  | [optional] 
**content_stream_type_details** | [**ContentStreamTypeAssignedTargetingOptionDetails**](ContentStreamTypeAssignedTargetingOptionDetails.md) |  | [optional] 
**day_and_time_details** | [**DayAndTimeAssignedTargetingOptionDetails**](DayAndTimeAssignedTargetingOptionDetails.md) |  | [optional] 
**device_make_model_details** | [**DeviceMakeModelAssignedTargetingOptionDetails**](DeviceMakeModelAssignedTargetingOptionDetails.md) |  | [optional] 
**device_type_details** | [**DeviceTypeAssignedTargetingOptionDetails**](DeviceTypeAssignedTargetingOptionDetails.md) |  | [optional] 
**digital_content_label_exclusion_details** | [**DigitalContentLabelAssignedTargetingOptionDetails**](DigitalContentLabelAssignedTargetingOptionDetails.md) |  | [optional] 
**environment_details** | [**EnvironmentAssignedTargetingOptionDetails**](EnvironmentAssignedTargetingOptionDetails.md) |  | [optional] 
**exchange_details** | [**ExchangeAssignedTargetingOptionDetails**](ExchangeAssignedTargetingOptionDetails.md) |  | [optional] 
**gender_details** | [**GenderAssignedTargetingOptionDetails**](GenderAssignedTargetingOptionDetails.md) |  | [optional] 
**geo_region_details** | [**GeoRegionAssignedTargetingOptionDetails**](GeoRegionAssignedTargetingOptionDetails.md) |  | [optional] 
**household_income_details** | [**HouseholdIncomeAssignedTargetingOptionDetails**](HouseholdIncomeAssignedTargetingOptionDetails.md) |  | [optional] 
**inheritance** | **str** | Output only. The inheritance status of the assigned targeting option. | [optional] [readonly] 
**inventory_source_details** | [**InventorySourceAssignedTargetingOptionDetails**](InventorySourceAssignedTargetingOptionDetails.md) |  | [optional] 
**inventory_source_group_details** | [**InventorySourceGroupAssignedTargetingOptionDetails**](InventorySourceGroupAssignedTargetingOptionDetails.md) |  | [optional] 
**keyword_details** | [**KeywordAssignedTargetingOptionDetails**](KeywordAssignedTargetingOptionDetails.md) |  | [optional] 
**language_details** | [**LanguageAssignedTargetingOptionDetails**](LanguageAssignedTargetingOptionDetails.md) |  | [optional] 
**name** | **str** | Output only. The resource name for this assigned targeting option. | [optional] [readonly] 
**native_content_position_details** | [**NativeContentPositionAssignedTargetingOptionDetails**](NativeContentPositionAssignedTargetingOptionDetails.md) |  | [optional] 
**negative_keyword_list_details** | [**NegativeKeywordListAssignedTargetingOptionDetails**](NegativeKeywordListAssignedTargetingOptionDetails.md) |  | [optional] 
**omid_details** | [**OmidAssignedTargetingOptionDetails**](OmidAssignedTargetingOptionDetails.md) |  | [optional] 
**on_screen_position_details** | [**OnScreenPositionAssignedTargetingOptionDetails**](OnScreenPositionAssignedTargetingOptionDetails.md) |  | [optional] 
**operating_system_details** | [**OperatingSystemAssignedTargetingOptionDetails**](OperatingSystemAssignedTargetingOptionDetails.md) |  | [optional] 
**parental_status_details** | [**ParentalStatusAssignedTargetingOptionDetails**](ParentalStatusAssignedTargetingOptionDetails.md) |  | [optional] 
**poi_details** | [**PoiAssignedTargetingOptionDetails**](PoiAssignedTargetingOptionDetails.md) |  | [optional] 
**proximity_location_list_details** | [**ProximityLocationListAssignedTargetingOptionDetails**](ProximityLocationListAssignedTargetingOptionDetails.md) |  | [optional] 
**regional_location_list_details** | [**RegionalLocationListAssignedTargetingOptionDetails**](RegionalLocationListAssignedTargetingOptionDetails.md) |  | [optional] 
**sensitive_category_exclusion_details** | [**SensitiveCategoryAssignedTargetingOptionDetails**](SensitiveCategoryAssignedTargetingOptionDetails.md) |  | [optional] 
**session_position_details** | [**SessionPositionAssignedTargetingOptionDetails**](SessionPositionAssignedTargetingOptionDetails.md) |  | [optional] 
**sub_exchange_details** | [**SubExchangeAssignedTargetingOptionDetails**](SubExchangeAssignedTargetingOptionDetails.md) |  | [optional] 
**targeting_type** | **str** | Output only. Identifies the type of this assigned targeting option. | [optional] [readonly] 
**third_party_verifier_details** | [**ThirdPartyVerifierAssignedTargetingOptionDetails**](ThirdPartyVerifierAssignedTargetingOptionDetails.md) |  | [optional] 
**url_details** | [**UrlAssignedTargetingOptionDetails**](UrlAssignedTargetingOptionDetails.md) |  | [optional] 
**user_rewarded_content_details** | [**UserRewardedContentAssignedTargetingOptionDetails**](UserRewardedContentAssignedTargetingOptionDetails.md) |  | [optional] 
**video_player_size_details** | [**VideoPlayerSizeAssignedTargetingOptionDetails**](VideoPlayerSizeAssignedTargetingOptionDetails.md) |  | [optional] 
**viewability_details** | [**ViewabilityAssignedTargetingOptionDetails**](ViewabilityAssignedTargetingOptionDetails.md) |  | [optional] 
**youtube_channel_details** | [**YoutubeChannelAssignedTargetingOptionDetails**](YoutubeChannelAssignedTargetingOptionDetails.md) |  | [optional] 
**youtube_video_details** | [**YoutubeVideoAssignedTargetingOptionDetails**](YoutubeVideoAssignedTargetingOptionDetails.md) |  | [optional] 

## Example

```python
from openapi_client.models.assigned_targeting_option import AssignedTargetingOption

# TODO update the JSON string below
json = "{}"
# create an instance of AssignedTargetingOption from a JSON string
assigned_targeting_option_instance = AssignedTargetingOption.from_json(json)
# print the JSON string representation of the object
print(AssignedTargetingOption.to_json())

# convert the object into a dict
assigned_targeting_option_dict = assigned_targeting_option_instance.to_dict()
# create an instance of AssignedTargetingOption from a dict
assigned_targeting_option_from_dict = AssignedTargetingOption.from_dict(assigned_targeting_option_dict)
```
[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


